--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,42 +1,26 @@
 .hero {
   padding-top: 12px;
 
+  &__slide {
+    position: relative;
+    z-index: 0;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    height: auto;
+  }
+
   &__pic {
     position: absolute;
-    width: 100%;
+    inset: 0;
     z-index: -1;
-  }
-
-  &__image {
-    object-position: 55% 96%;
+    display: block;
   }
 
   &__image {
     width: 100%;
-    height: 400px;
-
-    @include mobile {
-      max-height: 210px;
-    }
-  }
-
-  &__content {
-    padding: 80.5px 12px 80.5px 12px;
-
-    @include tablet {
-      & {
-        padding: 81px 12px 80px 12px;
-      }
-    }
-
-    @include mobile {
-      & {
-        padding: 30px 0 30px 0;
-        display: flex;
-        flex-direction: column;
-        height: 272px;
-      }
-    }
+    height: 100%;
+    vertical-align: bottom;
+    object-position: center;
   }
 
   &__title {
